@@ -2728,6 +2728,33 @@ operator|.
 name|class
 argument_list|)
 expr_stmt|;
+comment|// Turn on speculative execution for reducers
+name|HiveConf
+operator|.
+name|setVar
+argument_list|(
+name|job
+argument_list|,
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HADOOPSPECULATIVEEXECREDUCERS
+argument_list|,
+name|HiveConf
+operator|.
+name|getVar
+argument_list|(
+name|job
+argument_list|,
+name|HiveConf
+operator|.
+name|ConfVars
+operator|.
+name|HIVESPECULATIVEEXECREDUCERS
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|String
 name|inpFormat
 init|=
